# zxlab

./: .dev.vars.example  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.ai.json  tsconfig.digital-starter.json  wrangler.jsonc
apps/risk-api/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/risk-api/alembic/: env.py  script.py.mako
apps/risk-api/config/: risk_rules.yaml
apps/risk-api/docs/: prompt.md
apps/risk-api/src/risk_api/: __init__.py  demo.py  main.py  optional_market_tools.py  settings.py
apps/risk-api/src/risk_api/db/: models.py
apps/risk-api/src/risk_api/market_gateway/: __init__.py  models.py  protocols.py  quality.py  service.py
apps/risk-api/src/risk_api/market_gateway/providers/: __init__.py  mock.py
apps/risk-api/src/risk_api/portfolio_ledger/: __init__.py  models.py  protocols.py  service.py
apps/risk-api/src/risk_api/review_agent/: __init__.py  schemas.py  service.py  tool_registry.py
apps/risk-api/src/risk_api/risk_engine/: __init__.py  metrics.py  models.py  service.py
apps/risk-api/src/risk_api/shared/: __init__.py  evidence.py
apps/risk-api/tests/: test_market_gateway.py  test_portfolio_ledger.py  test_review_agent.py  test_risk_engine.py
apps/zxdrop/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/zxdrop/desktop/src-tauri/capabilities/: default.json
apps/zxdrop/desktop/src-tauri/icons/: icon.icns
apps/zxdrop/desktop/src-tauri/src/: lib.rs  main.rs
apps/zxtoolkit/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/zxtoolkit/desktop/src-tauri/capabilities/: default.json
apps/zxtoolkit/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ai-gateway.md  lab-status.md  risk-mvp-architecture.md  visual-guidelines.md  zx-signal.md
prompts/: note-cover-system.md
public/: _routes.json  robots.txt
scripts/: check-digital-starter.mjs  check-internal-links.mjs  generate-note-covers.ts  generate-yuragi-home.mjs  note-cover-pipeline.ts  obsidian-notes-manifest.json  obsidian-publisher.test.ts  obsidian-publisher.ts  publish-obsidian-notes.ts  (+2 more)
(+481 files in other folders)
