[package]
name = "zxdrop-desktop"
version = "0.1.0"
description = "zxdrop macOS menu bar delivery app"
authors = ["zxlab"]
edition = "2021"

[lib]
name = "zxdrop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
